--- a/stylehome/templates/base.html
+++ b/stylehome/templates/base.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>StyleHome | {% block title %}{% endblock title %}</title>
         <meta name="author" content="Untree.co">
         <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
 
@@ -15,7 +16,16 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="{% static 'core/css/tiny-slider.css' %}" rel="stylesheet">
 		<link href="{% static 'core/css/style.css' %}" rel="stylesheet">
-		<title>StyleHome | {% block title %}{% endblock title %}</title>
+		{% block extra_css %}
+			<!-- Your stuff: Third-party CSS libraries go here -->
+      		<!-- This file stores project-specific CSS -->
+		{% endblock extra_css %}
+
+		{% block extra_javascript %}
+			<!-- Your stuff: Third-party javascript libraries go here -->
+      		<!-- place project specific Javascript in this file -->
+		{% endblock extra_javascript %}
+		
 	</head>
 
 	<body>
@@ -32,19 +42,29 @@
 
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Home</a>
+						<li class="{% if request.path == '/' %}nav-item active{% endif %}">
+							<a class="nav-link" href="{% url 'home' %}">Home</a>
 						</li>
-						<li><a class="nav-link" href="#">Shop</a></li>
-						<li><a class="nav-link" href="#">About us</a></li>
-						<li><a class="nav-link" href="#">Services</a></li>
-						<li><a class="nav-link" href="#">Blog</a></li>
-						<li><a class="nav-link" href="#">Contact us</a></li>
+						<li class="{% if request.path == '/shop/' %}nav-item active{% endif %}">
+							<a class="nav-link" href="{% url 'shop' %}">Shop</a>
+						</li>
+						<li class="{% if request.path == '/about/' %}nav-item active{% endif %}">
+							<a class="nav-link" href="{% url 'about' %}">About us</a>
+						</li>
+						<li class="{% if request.path == '/service/' %}nav-item active{% endif %}">
+							<a class="nav-link" href="{% url 'service' %}">Services</a>
+						</li>
+						<li class="{% if request.path == '/blog/' %}nav-item active{% endif %}">
+							<a class="nav-link" href="{% url 'blog' %}">Blog</a>
+						</li>
+						<li class="{% if request.path == '/contact/' %}nav-item active{% endif %}">
+							<a class="nav-link" href="{% url 'contact' %}">Contact us</a>
+						</li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
 						<li><a class="nav-link" href="#"><img src="{% static 'images/user.svg' %}"></a></li>
-						<li><a class="nav-link" href="#"><img src="{% static 'images/cart.svg' %}"></a></li>
+						<li><a class="nav-link" href="{% url 'cart' %}"><img src="{% static 'images/cart.svg' %}"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -165,6 +185,10 @@
 		<script src="{% static 'core/js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{% static 'core/js/tiny-slider.js' %}"></script>
 		<script src="{% static 'core/js/custom.js' %}"></script>
+		{% block inline_javascript %}
+			<!-- Script tags with only code, no src (defer by default). To run
+			with a "defer" so that you run inline code: -->
+		{% endblock inline_javascript %}
 	</body>
 
 </html>
