se creo la app client donde se añadieron los template login y profile, se dividio en dos el base separandole el footer para que asi no apareciera en el login

--- a/stylehome/apps/about/templates/about.html
+++ b/stylehome/apps/about/templates/about.html
@@ -260,4 +260,6 @@ Separated they live in Bookmarksgrove right at the coast of the Semantics, a lar
 </div>
 </div>
 <!-- End Testimonial Slider -->
+{% include 'footer.html' %}
+
 {% endblock content %}
