--- a/stylehome/apps/about/templates/about.html
+++ b/stylehome/apps/about/templates/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/menu.html' %}
 {% load static %}
 {% load i18n %}
 
@@ -22,7 +22,7 @@ About Us
             </div>
             <div class="col-lg-7">
                 <div class="hero-img-wrap">
-                    <img src="images/couch.png" class="img-fluid">
+                    <img src="{% static 'images/couch.png' %}" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@ About Us
                     <div class="col-6 col-md-6">
                         <div class="feature">
                             <div class="icon">
-                                <img src="images/truck.svg" alt="Image" class="imf-fluid">
+                                <img src="{% static 'images/truck.svg' %}" alt="Image" class="imf-fluid">
                             </div>
                             <h3>Fast &amp; Free Shipping</h3>
                             <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
@@ -56,7 +56,7 @@ About Us
                     <div class="col-6 col-md-6">
                         <div class="feature">
                             <div class="icon">
-                                <img src="images/bag.svg" alt="Image" class="imf-fluid">
+                                <img src="{% static 'images/bag.svg' %}" alt="Image" class="imf-fluid">
                             </div>
                             <h3>Easy to Shop</h3>
                             <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
@@ -67,7 +67,7 @@ About Us
                     <div class="col-6 col-md-6">
                         <div class="feature">
                             <div class="icon">
-                                <img src="images/support.svg" alt="Image" class="imf-fluid">
+                                <img src="{% static 'images/support.svg' %}" alt="Image" class="imf-fluid">
                             </div>
                             <h3>24/7 Support</h3>
                             <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
@@ -78,7 +78,7 @@ About Us
                     <div class="col-6 col-md-6">
                         <div class="feature">
                             <div class="icon">
-                                <img src="images/return.svg" alt="Image" class="imf-fluid">
+                                <img src="{% static 'images/return.svg' %}" alt="Image" class="imf-fluid">
                             </div>
                             <h3>Hassle Free Returns</h3>
                             <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
@@ -91,7 +91,7 @@ About Us
 
             <div class="col-lg-5">
                 <div class="img-wrap">
-                    <img src="images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
+                    <img src="{% static 'images/why-choose-us-img.jpg' %}" alt="Image" class="img-fluid">
                 </div>
             </div>
 
@@ -114,7 +114,7 @@ About Us
 
             <!-- Start Column 1 -->
             <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-                <img src="images/person_1.jpg" class="img-fluid mb-5">
+                <img src="{% static 'images/person_1.jpg' %}" class="img-fluid mb-5">
                 <h3 clas><a href="#"><span class="">Lawson</span> Arnold</a></h3>
                 <span class="d-block position mb-4">CEO, Founder, Atty.</span>
                 <p>Separated they live in.
@@ -127,7 +127,7 @@ About Us
 
             <!-- Start Column 2 -->
             <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-                <img src="images/person_2.jpg" class="img-fluid mb-5">
+                <img src="{% static 'images/person_2.jpg' %}" class="img-fluid mb-5">
 
                 <h3 clas><a href="#"><span class="">Jeremy</span> Walker</a></h3>
                 <span class="d-block position mb-4">CEO, Founder, Atty.</span>
@@ -142,7 +142,7 @@ About Us
 
             <!-- Start Column 3 -->
             <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-                <img src="images/person_3.jpg" class="img-fluid mb-5">
+                <img src="{% static 'images/person_3.jpg' %}" class="img-fluid mb-5">
                 <h3 clas><a href="#"><span class="">Patrik</span> White</a></h3>
                 <span class="d-block position mb-4">CEO, Founder, Atty.</span>
                 <p>Separated they live in.
@@ -155,7 +155,7 @@ About Us
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-                <img src="images/person_4.jpg" class="img-fluid mb-5">
+                <img src="{% static 'images/person_4.jpg' %}" class="img-fluid mb-5">
 
                 <h3 clas><a href="#"><span class="">Kathryn</span> Ryan</a></h3>
                 <span class="d-block position mb-4">CEO, Founder, Atty.</span>
@@ -213,7 +213,7 @@ About Us
 
                                         <div class="author-info">
                                             <div class="author-pic">
-                                                <img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+                                                <img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
                                             </div>
                                             <h3 class="font-weight-bold">Maria Jones</h3>
                                             <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
@@ -240,7 +240,7 @@ About Us
 
                                         <div class="author-info">
                                             <div class="author-pic">
-                                                <img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+                                                <img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
                                             </div>
                                             <h3 class="font-weight-bold">Maria Jones</h3>
                                             <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
@@ -267,7 +267,7 @@ About Us
 
                                         <div class="author-info">
                                             <div class="author-pic">
-                                                <img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+                                                <img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
                                             </div>
                                             <h3 class="font-weight-bold">Maria Jones</h3>
                                             <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
