--- a/stylehome/apps/blog/templates/blog.html
+++ b/stylehome/apps/blog/templates/blog.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/menu.html' %}
 {% load static %}
 {% load i18n %}
 
@@ -22,7 +22,7 @@ Blog
 			</div>
 			<div class="col-lg-7">
 				<div class="hero-img-wrap">
-					<img src="images/couch.png" class="img-fluid">
+					<img src="{% static 'images/couch.png' %}" class="img-fluid">
 				</div>
 			</div>
 		</div>
@@ -40,7 +40,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">First Time Home Owner Ideas</a></h3>
 						<div class="meta">
@@ -52,7 +52,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
 						<div class="meta">
@@ -64,7 +64,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
 						<div class="meta">
@@ -76,7 +76,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">First Time Home Owner Ideas</a></h3>
 						<div class="meta">
@@ -88,7 +88,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
 						<div class="meta">
@@ -100,7 +100,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
 						<div class="meta">
@@ -112,7 +112,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">First Time Home Owner Ideas</a></h3>
 						<div class="meta">
@@ -124,7 +124,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
 						<div class="meta">
@@ -136,7 +136,7 @@ Blog
 
 			<div class="col-12 col-sm-6 col-md-4 mb-5">
 				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg' %}" alt="Image" class="img-fluid"></a>
 					<div class="post-content-entry">
 						<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
 						<div class="meta">
@@ -188,7 +188,7 @@ Blog
 
 										<div class="author-info">
 											<div class="author-pic">
-												<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+												<img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
 											</div>
 											<h3 class="font-weight-bold">Maria Jones</h3>
 											<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
@@ -215,7 +215,7 @@ Blog
 
 										<div class="author-info">
 											<div class="author-pic">
-												<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+												<img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
 											</div>
 											<h3 class="font-weight-bold">Maria Jones</h3>
 											<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
@@ -242,7 +242,7 @@ Blog
 
 										<div class="author-info">
 											<div class="author-pic">
-												<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+												<img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
 											</div>
 											<h3 class="font-weight-bold">Maria Jones</h3>
 											<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
