--- a/stylehome/apps/service/templates/service.html
+++ b/stylehome/apps/service/templates/service.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/menu.html' %}
 {% load static %}
 {% load i18n %}
 
@@ -22,7 +22,7 @@ Service
             </div>
             <div class="col-lg-7">
                 <div class="hero-img-wrap">
-                    <img src="images/couch.png" class="img-fluid">
+                    <img src="{% static 'images/couch.png' %}" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/truck.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/truck.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>Fast &amp; Free Shipping</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -51,7 +51,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/bag.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/bag.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>Easy to Shop</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -61,7 +61,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/support.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/support.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>24/7 Support</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -71,7 +71,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/return.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/return.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>Hassle Free Returns</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -81,7 +81,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/truck.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/truck.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>Fast &amp; Free Shipping</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -91,7 +91,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/bag.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/bag.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>Easy to Shop</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -101,7 +101,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/support.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/support.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>24/7 Support</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -111,7 +111,7 @@ Service
             <div class="col-6 col-md-6 col-lg-3 mb-4">
                 <div class="feature">
                     <div class="icon">
-                        <img src="images/return.svg" alt="Image" class="imf-fluid">
+                        <img src="{% static 'images/return.svg' %}" alt="Image" class="imf-fluid">
                     </div>
                     <h3>Hassle Free Returns</h3>
                     <p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
@@ -141,12 +141,12 @@ Service
             <!-- Start Column 2 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
                 <a class="product-item" href="#">
-                    <img src="images/product-1.png" class="img-fluid product-thumbnail">
+                    <img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
                     <h3 class="product-title">Nordic Chair</h3>
                     <strong class="product-price">$50.00</strong>
 
                     <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid">
+                        <img src="{% static 'images/cross.svg' %}" class="img-fluid">
                     </span>
                 </a>
             </div>
@@ -155,12 +155,12 @@ Service
             <!-- Start Column 3 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
                 <a class="product-item" href="#">
-                    <img src="images/product-2.png" class="img-fluid product-thumbnail">
+                    <img src="{% static 'images/product-2.png' %}" class="img-fluid product-thumbnail">
                     <h3 class="product-title">Kruzo Aero Chair</h3>
                     <strong class="product-price">$78.00</strong>
 
                     <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid">
+                        <img src="{% static 'images/cross.svg' %}" class="img-fluid">
                     </span>
                 </a>
             </div>
@@ -169,12 +169,12 @@ Service
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
                 <a class="product-item" href="#">
-                    <img src="images/product-3.png" class="img-fluid product-thumbnail">
+                    <img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
                     <h3 class="product-title">Ergonomic Chair</h3>
                     <strong class="product-price">$43.00</strong>
 
                     <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid">
+                        <img src="{% static 'images/cross.svg' %}" class="img-fluid">
                     </span>
                 </a>
             </div>
@@ -222,7 +222,7 @@ Service
 
                                         <div class="author-info">
                                             <div class="author-pic">
-                                                <img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+                                                <img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
                                             </div>
                                             <h3 class="font-weight-bold">Maria Jones</h3>
                                             <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
@@ -249,7 +249,7 @@ Service
 
                                         <div class="author-info">
                                             <div class="author-pic">
-                                                <img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+                                                <img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
                                             </div>
                                             <h3 class="font-weight-bold">Maria Jones</h3>
                                             <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
@@ -276,7 +276,7 @@ Service
 
                                         <div class="author-info">
                                             <div class="author-pic">
-                                                <img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+                                                <img src="{% static 'images/person-1.png' %}" alt="Maria Jones" class="img-fluid">
                                             </div>
                                             <h3 class="font-weight-bold">Maria Jones</h3>
                                             <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
