Creacion de menu,footer y banner

--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -9,22 +9,26 @@ Home
 {% block content %}
 <!-- Start Hero Section -->
 <div class="hero">
+	<div class="line"></div>
 	<div class="container">
 		<div class="row justify-content-between">
-			<div class="col-lg-5">
-				<div class="intro-excerpt">
-					<h1>Modern Interior <span clsas="d-block">Design Studio</span></h1>
-					<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-						vulputate velit imperdiet dolor tempor tristique.</p>
-					<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#"
-							class="btn btn-white-outline">Explore</a></p>
-				</div>
-			</div>
 			<div class="col-lg-7">
 				<div class="hero-img-wrap">
-					<img src="{% static 'images/couch.png' %}" class="img-fluid">
+					<img src="{% static 'images/BannerImg.png' %}" class="img-fluid">
 				</div>
 			</div>
+			<div class="col-lg-5">
+				<div class="intro-excerpt">
+					<h1>HOT DEALS THIS WEEK<span class="d-block colorfont"><h2 class="font30">HotSale 50%</h2>
+						MODERN FURNITURE</span></h1>
+					<!--<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+						vulputate velit imperdiet dolor tempor tristique.</p>--->
+					<p><!--<a href="" class="btn btn-secondary me-2">Shop Now</a>-->
+						<a href="#"
+							class="btn btn-white-outline">Ver ahora</a></p>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </div>
