--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -34,68 +34,89 @@ Home
 </div>
 <!-- End Hero Section -->
 
-<!-- Start Product Section -->
-<div class="product-section">
+<div class="content-category">
+	<div class="cart">
+		<div class="imgs">
+			<img src="{% static 'images/post-1.jpg' %}" alt="">
+		</div>
+		<div class="float">
+			<h3>Silla vintaje</h3>
+			<a href="">Inpeccionar</a>
+		</div>
+	</div>
+
+	<div class="cart">
+		<div class="imgs">
+			<img src="{% static 'images/post-1.jpg' %}" alt="">
+		</div>
+		<div class="float">
+			<h3>Jarrones de cerámica</h3>
+			<a href="">Inspeccionar</a>
+		</div>
+	</div>
+</div>
+
+
+<!-- Start Blog Section -
+<div class="blog-section">
 	<div class="container">
+		<!--<div class="row mb-5">
+			<div class="col-md-6">
+				<h2 class="section-title">Recent Blog</h2>
+			</div>
+			<div class="col-md-6 text-start text-md-end">
+				<a href="#" class="more">View All Posts</a>
+			</div>
+		</div>--
+
 		<div class="row">
 
-			<!-- Start Column 1 -->
-			<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-				<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-				<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-					velit imperdiet dolor tempor tristique. </p>
-				<p><a href="shop.html" class="btn">Explore</a></p>
+			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
+				<div class="post-entry">
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image"
+							class="img-fluid"></a>
+					<div class="post-content-entry">
+						<h3><a href="#">First Time Home Owner Ideas</a></h3>
+						<div class="meta">
+							<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
+						</div>
+					</div>
+				</div>
 			</div>
-			<!-- End Column 1 -->
 
-			<!-- Start Column 2 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Nordic Chair</h3>
-					<strong class="product-price">$50.00</strong>
-
-					<span class="icon-cross">
-						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
-					</span>
-				</a>
+			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
+				<div class="post-entry">
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image"
+							class="img-fluid"></a>
+					<div class="post-content-entry">
+						<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
+						<div class="meta">
+							<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
+						</div>
+					</div>
+				</div>
 			</div>
-			<!-- End Column 2 -->
 
-			<!-- Start Column 3 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="{% static 'images/product-2.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Kruzo Aero Chair</h3>
-					<strong class="product-price">$78.00</strong>
-
-					<span class="icon-cross">
-						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 3 -->
-
-			<!-- Start Column 4 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Ergonomic Chair</h3>
-					<strong class="product-price">$43.00</strong>
-
-					<span class="icon-cross">
-						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 4 -->
+			--<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
+				<div class="post-entry">
+					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg' %}" alt="Image"
+							class="img-fluid"></a>
+					<div class="post-content-entry">
+						<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
+						<div class="meta">
+							<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
+						</div>
+					</div>
+				</div>
+			</div>--
 
 		</div>
 	</div>
 </div>
-<!-- End Product Section -->
+-- End Blog Section -->
 
-<!-- Start Why Choose Us Section -->
+
+<!-- Start Why Choose Us Section 
 <div class="why-choose-section">
 	<div class="container">
 		<div class="row justify-content-between">
@@ -161,9 +182,96 @@ Home
 		</div>
 	</div>
 </div>
-<!-- End Why Choose Us Section -->
+ End Why Choose Us Section -->
 
-<!-- Start We Help Section -->
+<!-- Start Product Section -->
+<div class="product-section">
+	<div class="container">
+		<div class="row justify-content-between">
+
+			<!-- Start Column 1 --
+			<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
+				<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
+				<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
+					velit imperdiet dolor tempor tristique. </p>
+				<p><a href="shop.html" class="btn">Explore</a></p>
+			</div>
+			End Column 1 -->
+
+			<!-- Start Column 1 -->
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<a class="product-item" href="cart.html">
+					<img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
+					<h3 class="product-title">Nordic Chair</h3>
+					<strong class="product-price">$50.00</strong>
+
+					<span class="icon-cross">
+						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
+					</span>
+				</a>
+			</div>
+			<!-- End Column 1 -->
+
+			<!-- Start Column 2 -->
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<a class="product-item" href="cart.html">
+					<img src="{% static 'images/product-2.png' %}" class="img-fluid product-thumbnail">
+					<h3 class="product-title">Kruzo Aero Chair</h3>
+					<strong class="product-price">$78.00</strong>
+
+					<span class="icon-cross">
+						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
+					</span>
+				</a>
+			</div>
+			<!-- End Column 2 -->
+
+			<!-- Start Column 3 -->
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<a class="product-item" href="cart.html">
+					<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
+					<h3 class="product-title">Ergonomic Chair</h3>
+					<strong class="product-price">$43.00</strong>
+
+					<span class="icon-cross">
+						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
+					</span>
+				</a>
+			</div>
+			<!-- End Column 3 -->
+			
+			<!-- Start Column 4 -->
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="selected-item" >
+					<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
+					<h3 class="product-title">Ergonomic Chair</h3>
+					<p class="little-desc">Silla plegable para el parque Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+					<strong class="product-price">$43.00</strong>
+
+					<span class="icon-cross">
+						<a href="#"  >Ver todos</a>
+					</span>
+				</div>
+			</div>
+			<!-- End Column 4 -->
+		</div>
+	</div>
+</div>
+<!-- End Product Section -->
+
+
+<div class="content-img">
+	<img src="{% static 'images/cama.png' %}" alt="">
+	<div class="block">
+		<h3 class="title">Vestidores de cama</h3>
+		<h4>$150.00<span><h3 class="selt">$220.00</h3></span></h4>
+		<p>Mejores modelos y detalles en los mejores precios</p>
+		<a href="">Ver detalles</a>
+	</div>
+</div>
+
+
+<!-- Start We Help Section 
 <div class="we-help-section">
 	<div class="container">
 		<div class="row justify-content-between">
@@ -191,9 +299,9 @@ Home
 		</div>
 	</div>
 </div>
-<!-- End We Help Section -->
+ End We Help Section -->
 
-<!-- Start Popular Product -->
+<!-- Start Popular Product 
 <div class="popular-product">
 	<div class="container">
 		<div class="row">
@@ -240,9 +348,9 @@ Home
 		</div>
 	</div>
 </div>
-<!-- End Popular Product -->
+ End Popular Product -->
 
-<!-- Start Testimonial Slider -->
+<!-- Start Testimonial Slider 
 <div class="testimonial-section">
 	<div class="container">
 		<div class="row">
@@ -288,7 +396,7 @@ Home
 								</div>
 							</div>
 						</div>
-						<!-- END item -->
+						 END item 
 
 						<div class="item">
 							<div class="row justify-content-center">
@@ -316,7 +424,7 @@ Home
 								</div>
 							</div>
 						</div>
-						<!-- END item -->
+						 END item --
 
 						<div class="item">
 							<div class="row justify-content-center">
@@ -344,7 +452,7 @@ Home
 								</div>
 							</div>
 						</div>
-						<!-- END item -->
+						 END item --
 
 					</div>
 
@@ -353,65 +461,9 @@ Home
 		</div>
 	</div>
 </div>
-<!-- End Testimonial Slider -->
+ End Testimonial Slider -->
 
-<!-- Start Blog Section -->
-<div class="blog-section">
-	<div class="container">
-		<div class="row mb-5">
-			<div class="col-md-6">
-				<h2 class="section-title">Recent Blog</h2>
-			</div>
-			<div class="col-md-6 text-start text-md-end">
-				<a href="#" class="more">View All Posts</a>
-			</div>
-		</div>
 
-		<div class="row">
-
-			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image"
-							class="img-fluid"></a>
-					<div class="post-content-entry">
-						<h3><a href="#">First Time Home Owner Ideas</a></h3>
-						<div class="meta">
-							<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image"
-							class="img-fluid"></a>
-					<div class="post-content-entry">
-						<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-						<div class="meta">
-							<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg' %}" alt="Image"
-							class="img-fluid"></a>
-					<div class="post-content-entry">
-						<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-						<div class="meta">
-							<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</div>
-<!-- End Blog Section -->
 {% include 'layout/footer.html' %}
 
 {% endblock content %}
