--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -228,15 +228,15 @@ Home
 
 			<!-- Start Column 3 -->
 			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
+				<div class="selected-item">
 					<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
 					<h3 class="product-title">Ergonomic Chair</h3>
 					<strong class="product-price">$43.00</strong>
 
 					<span class="icon-cross">
-						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
+						<a href="#"  >Ver todos</a>
 					</span>
-				</a>
+				</div>
 			</div>
 			<!-- End Column 3 -->
 			
