--- a/stylehome/static/core/css/style.css
+++ b/stylehome/static/core/css/style.css
@@ -37,8 +37,9 @@ a {
 
 .line {
     width: 100%;
-    height: 1px;
+    height: 11px;
     background: #BDCDD0 !important;
+    padding-bottom: 10px;
 }
 .line .lineblack {
     margin-top: 5px;
@@ -287,13 +288,18 @@ a {
       right: 0;
       position: absolute;
       content: "";
-      background: #dce5e4;
+      background: rgba(0, 0, 0, 0.4);
       height: 0%;
       z-index: -1;
       border-radius: 10px;
       -webkit-transition: .3s all ease;
       -o-transition: .3s all ease;
-      transition: .3s all ease; }
+      transition: .3s all ease;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+}
     .product-section .product-item:hover .product-thumbnail {
       top: -25px; }
     .product-section .product-item:hover .icon-cross {
