--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -21,11 +21,9 @@ Home
 				<div class="intro-excerpt">
 					<h1>HOT DEALS THIS WEEK<span class="d-block colorfont"><h2 class="font30">HotSale 50%</h2>
 						MODERN FURNITURE</span></h1>
-					<!--<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-						vulputate velit imperdiet dolor tempor tristique.</p>--->
-					<p><!--<a href="" class="btn btn-secondary me-2">Shop Now</a>-->
-						<a href="#"
-							class="btn btn-white-outline">Ver ahora</a></p>
+					<p>
+						<a href="#" class="btn btn-white-outline">Ver ahora</a>
+					</p>
 				</div>
 			</div>
 
@@ -34,169 +32,27 @@ Home
 </div>
 <!-- End Hero Section -->
 
-<div class="content-category">
-	<div class="cart">
-		<div class="imgs">
-			<img src="{% static 'images/post-1.jpg' %}" alt="">
-		</div>
-		<div class="float">
-			<h3>Silla vintaje</h3>
-			<a href="">Inpeccionar</a>
+<section class="content-category">
+	<div class="card-category">
+		<img src="{% static 'images/post-1.jpg' %}" alt="Imagen de la categoría 1">
+		<div class="float-text">
+			<h3>Silla vintage</h3>
+			<a href="#" class="btn-black-outline">Inspeccionar</a>
 		</div>
 	</div>
 
-	<div class="cart">
-		<div class="imgs">
-			<img src="{% static 'images/post-1.jpg' %}" alt="">
-		</div>
-		<div class="float">
+	<div class="card-category">
+		<img src="{% static 'images/post-1.jpg' %}" alt="Imagen de la categoría 2">
+		<div class="float-text">
 			<h3>Jarrones de cerámica</h3>
-			<a href="">Inspeccionar</a>
+			<a href="#" class="btn-black-outline">Inspeccionar</a>
 		</div>
 	</div>
-</div>
-
-
-<!-- Start Blog Section -
-<div class="blog-section">
-	<div class="container">
-		<!--<div class="row mb-5">
-			<div class="col-md-6">
-				<h2 class="section-title">Recent Blog</h2>
-			</div>
-			<div class="col-md-6 text-start text-md-end">
-				<a href="#" class="more">View All Posts</a>
-			</div>
-		</div>--
-
-		<div class="row">
-
-			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-1.jpg' %}" alt="Image"
-							class="img-fluid"></a>
-					<div class="post-content-entry">
-						<h3><a href="#">First Time Home Owner Ideas</a></h3>
-						<div class="meta">
-							<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-2.jpg' %}" alt="Image"
-							class="img-fluid"></a>
-					<div class="post-content-entry">
-						<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-						<div class="meta">
-							<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			--<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-				<div class="post-entry">
-					<a href="#" class="post-thumbnail"><img src="{% static 'images/post-3.jpg' %}" alt="Image"
-							class="img-fluid"></a>
-					<div class="post-content-entry">
-						<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-						<div class="meta">
-							<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-						</div>
-					</div>
-				</div>
-			</div>--
-
-		</div>
-	</div>
-</div>
--- End Blog Section -->
-
-
-<!-- Start Why Choose Us Section 
-<div class="why-choose-section">
-	<div class="container">
-		<div class="row justify-content-between">
-			<div class="col-lg-6">
-				<h2 class="section-title">Why Choose Us</h2>
-				<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit
-					imperdiet dolor tempor tristique.</p>
-
-				<div class="row my-5">
-					<div class="col-6 col-md-6">
-						<div class="feature">
-							<div class="icon">
-								<img src="{% static 'images/truck.svg' %}" alt="Image" class="imf-fluid">
-							</div>
-							<h3>Fast &amp; Free Shipping</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-							</p>
-						</div>
-					</div>
-
-					<div class="col-6 col-md-6">
-						<div class="feature">
-							<div class="icon">
-								<img src="{% static 'images/bag.svg' %}" alt="Image" class="imf-fluid">
-							</div>
-							<h3>Easy to Shop</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-							</p>
-						</div>
-					</div>
-
-					<div class="col-6 col-md-6">
-						<div class="feature">
-							<div class="icon">
-								<img src="{% static 'images/support.svg' %}" alt="Image" class="imf-fluid">
-							</div>
-							<h3>24/7 Support</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-							</p>
-						</div>
-					</div>
-
-					<div class="col-6 col-md-6">
-						<div class="feature">
-							<div class="icon">
-								<img src="{% static 'images/return.svg' %}" alt="Image" class="imf-fluid">
-							</div>
-							<h3>Hassle Free Returns</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
-							</p>
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-			<div class="col-lg-5">
-				<div class="img-wrap">
-					<img src="{% static 'images/why-choose-us-img.jpg' %}" alt="Image" class="img-fluid">
-				</div>
-			</div>
-
-		</div>
-	</div>
-</div>
- End Why Choose Us Section -->
+</section>
 
 <!-- Start Product Section -->
-<div class="product-section">
-	<div class="container">
+<section class="product-section">
 		<div class="row justify-content-between">
-
-			<!-- Start Column 1 --
-			<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-				<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-				<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-					velit imperdiet dolor tempor tristique. </p>
-				<p><a href="shop.html" class="btn">Explore</a></p>
-			</div>
-			End Column 1 -->
 
 			<!-- Start Column 1 -->
 			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
@@ -254,215 +110,32 @@ Home
 				</div>
 			</div>
 			<!-- End Column 4 -->
+
+			<div class="card-item">
+				<img src="{% static 'images/product-3.png' %}" alt="#">
+				<div class="card-content">
+					<h2>t</h2>
+					<a href="#">a</a>
+				</div>
+			</div>
+
+			
 		</div>
-	</div>
-</div>
+</section>
 <!-- End Product Section -->
 
 
-<div class="content-img">
+<section class="pre-footer-section">
 	<img src="{% static 'images/cama.png' %}" alt="">
-	<div class="block">
-		<h3 class="title">Vestidores de cama</h3>
-		<h4>$150.00<span><h3 class="selt">$220.00</h3></span></h4>
-		<p>Mejores modelos y detalles en los mejores precios</p>
-		<a href="">Ver detalles</a>
-	</div>
-</div>
-
-
-<!-- Start We Help Section 
-<div class="we-help-section">
-	<div class="container">
-		<div class="row justify-content-between">
-			<div class="col-lg-7 mb-5 mb-lg-0">
-				<div class="imgs-grid">
-					<div class="grid grid-1"><img src="{% static 'images/img-grid-1.jpg' %}" alt="Untree.co"></div>
-					<div class="grid grid-2"><img src="{% static 'images/img-grid-2.jpg' %}" alt="Untree.co"></div>
-					<div class="grid grid-3"><img src="{% static 'images/img-grid-3.jpg' %}" alt="Untree.co"></div>
-				</div>
-			</div>
-			<div class="col-lg-5 ps-lg-5">
-				<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-				<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam
-					ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant
-					morbi tristique senectus et netus et malesuada</p>
-
-				<ul class="list-unstyled custom-list my-4">
-					<li>Donec vitae odio quis nisl dapibus malesuada</li>
-					<li>Donec vitae odio quis nisl dapibus malesuada</li>
-					<li>Donec vitae odio quis nisl dapibus malesuada</li>
-					<li>Donec vitae odio quis nisl dapibus malesuada</li>
-				</ul>
-				<p><a herf="#" class="btn">Explore</a></p>
-			</div>
+	<article class="pre-footer-article">
+		<div>
+			<h3>Vestidores de cama</h3>
+			<h4>$150.00<span><h3>$220.00</h3></span></h4>
+			<p>Mejores modelos y detalles en los mejores precios</p>
+			<a href="#">Ver detalles</a>
 		</div>
-	</div>
-</div>
- End We Help Section -->
-
-<!-- Start Popular Product 
-<div class="popular-product">
-	<div class="container">
-		<div class="row">
-
-			<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
-				<div class="product-item-sm d-flex">
-					<div class="thumbnail">
-						<img src="{% static 'images/product-1.png' %}" alt="Image" class="img-fluid">
-					</div>
-					<div class="pt-3">
-						<h3>Nordic Chair</h3>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
-				<div class="product-item-sm d-flex">
-					<div class="thumbnail">
-						<img src="{% static 'images/product-2.png' %}" alt="Image" class="img-fluid">
-					</div>
-					<div class="pt-3">
-						<h3>Kruzo Aero Chair</h3>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
-				<div class="product-item-sm d-flex">
-					<div class="thumbnail">
-						<img src="{% static 'images/product-3.png' %}" alt="Image" class="img-fluid">
-					</div>
-					<div class="pt-3">
-						<h3>Ergonomic Chair</h3>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</div>
- End Popular Product -->
-
-<!-- Start Testimonial Slider 
-<div class="testimonial-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-7 mx-auto text-center">
-				<h2 class="section-title">Testimonials</h2>
-			</div>
-		</div>
-
-		<div class="row justify-content-center">
-			<div class="col-lg-12">
-				<div class="testimonial-slider-wrap text-center">
-
-					<div id="testimonial-nav">
-						<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
-						<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
-					</div>
-
-					<div class="testimonial-slider">
-
-						<div class="item">
-							<div class="row justify-content-center">
-								<div class="col-lg-8 mx-auto">
-
-									<div class="testimonial-block text-center">
-										<blockquote class="mb-5">
-											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
-												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-												velit imperdiet dolor tempor tristique. Pellentesque habitant morbi
-												tristique senectus et netus et malesuada fames ac turpis egestas.
-												Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-										</blockquote>
-
-										<div class="author-info">
-											<div class="author-pic">
-												<img src="{% static 'images/person-1.png' %}" alt="Maria Jones"
-													class="img-fluid">
-											</div>
-											<h3 class="font-weight-bold">Maria Jones</h3>
-											<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-										</div>
-									</div>
-
-								</div>
-							</div>
-						</div>
-						 END item 
-
-						<div class="item">
-							<div class="row justify-content-center">
-								<div class="col-lg-8 mx-auto">
-
-									<div class="testimonial-block text-center">
-										<blockquote class="mb-5">
-											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
-												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-												velit imperdiet dolor tempor tristique. Pellentesque habitant morbi
-												tristique senectus et netus et malesuada fames ac turpis egestas.
-												Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-										</blockquote>
-
-										<div class="author-info">
-											<div class="author-pic">
-												<img src="{% static 'images/person-1.png' %}" alt="Maria Jones"
-													class="img-fluid">
-											</div>
-											<h3 class="font-weight-bold">Maria Jones</h3>
-											<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-										</div>
-									</div>
-
-								</div>
-							</div>
-						</div>
-						 END item --
-
-						<div class="item">
-							<div class="row justify-content-center">
-								<div class="col-lg-8 mx-auto">
-
-									<div class="testimonial-block text-center">
-										<blockquote class="mb-5">
-											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
-												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-												velit imperdiet dolor tempor tristique. Pellentesque habitant morbi
-												tristique senectus et netus et malesuada fames ac turpis egestas.
-												Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-										</blockquote>
-
-										<div class="author-info">
-											<div class="author-pic">
-												<img src="{% static 'images/person-1.png' %}" alt="Maria Jones"
-													class="img-fluid">
-											</div>
-											<h3 class="font-weight-bold">Maria Jones</h3>
-											<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-										</div>
-									</div>
-
-								</div>
-							</div>
-						</div>
-						 END item --
-
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
- End Testimonial Slider -->
-
+	</article>
+</section>
 
 {% include 'layout/footer.html' %}
 
